kubernetes/cluster/default/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: default
  labels:
    app.kubernetes.io/name: pihole
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://pihole.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: >-
      http://authentik-outpost-embedded.default.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
spec:
  rules:
    - host: pihole.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /admin  # how to protect only Admin endpoint
            backend:
              service:
                name: pihole-ui
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.brhd.io
